--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@
 .navbar-fixed-top{
   background-color: black;
 
+
 }
 .navbar-fixed-top a{
   color: white;
-  height: 50px;
+  height: 70px;
 }
 
  .navbar-fixed-top ul li a:hover {
@@ -22,274 +23,11 @@
     opacity: 1;
     background-color: #24890D;
  }
-
- .glyphicon-search{
-  margin-right: 20px;
- }
-
- /*section images*/
-.col-lg-10{
-  margin-top: 50px;
-  padding-left: 0px;
+h1{
+  margin-top: 80px;
 }
-
-  .photo {
-  	width:350px; 
- 	  height: 194px;
- 	  padding:0 0 0 0!important;
-   	background-color: black;
-    margin-top: 20px;
- }
-
-.photo:hover{
-  opacity:0.6;
-  color: white;
-}
-
-.sousimage {
-  padding: 0 auto;
-  height: 118px;
-  margin-top: 25px;
-  color: white;
-
-}
-
-.sousimage a{
-  text-decoration: none;
-  color: white;
-  font-size: 14px;
-}
-
-.sousimage a h4{
-  text-decoration: none;
-  color: white;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 300;
-}
-
-.sousimage a:hover{
-  opacity:0.6;
-  color: #24890D;
-  text-decoration: none;
-}
-
-.sousimage a h4:hover{
-  opacity:0.6;
-  color: #24890D;
-  text-decoration: none;
-}
-
-/* partie sousimage centre  */
-
-.col-lg-8{
-  padding-left: 115px;
-}
-
-h1 {
-  width: 451px;
-  margin-top: 70px;
-  font-size: 35px;
-  margin-bottom: 25px;
-  font-weight: 300;
-
-}
-
-/* partie sousimage droite  */
-
-
-h4 {
-  font-weight: bold;
-}
-h5{
-  color: white;
-  padding-left: 20px;
-  font-weight: bold;
-}
-h6 {
-  padding-left: 20px;
-}
-
-#sousimagedroite{
-  padding: 0 auto;
-  margin: 0;
-  line-height: 20px;
-  
-}
-
-#sousimagedroite p{
-  color: gray;
-}
-
-#sousimagedroite h5{
-  color: black;
-  float: right;
-  margin-top: 0px;
-  padding-right: 155px;
-  font-weight: bold;
-}
-
-
- .paragraphe{
-    width: 451px;
-    margin-top: 20px;
-    padding-top: 20px;
- }
-
- .sousvideo{
-  color:#24890D;
-  text-decoration: underline; 
- }
-
- .sousvideo:hover{
-   color:#24890D;
-  text-decoration:none; 
- }
-
-hr{
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
- .lignenoir1{
-    margin-top:70px ;
-    width: 310px;
-    height: 5px;
-    background-color: black;
-    }
-
-  .lignenoir2{
-    margin-top:45px ;
-    width: 310px;
-    height: 5px;
-    background-color: black;
- }
-
- .fa-play{
-  padding: 10px;
-  border: 2px solid;
-}
-
-
- .photo4{
-    width: 308px;
-    height: 173px;
-    margin-top: 20px;
-    
- }
-
-.photo4:hover{
-  opacity:0.6;
-  color: white;
-}
-
-
- /* navgauche*/
-
- #navgauche{
-  margin-right: 0px;
-  background-color: black;
-  margin-top: 50px;
-
- }
-#navgauche h6{
-  margin-bottom: 20px;
-}
-
-.navbarleft ul li a {
-  color: white;
-  text-decoration: none;
-}
-.navbarleft ul li:hover {
-  background-color:#24890D;
-  text-decoration: none;
-  
-}
-
-.navbarleft ul li {
-  list-style: none;
-  height: 38px;
-  padding-top: 10px;
-  padding-left: 20px;
-}
-.fa-github{
-  float: right;
-  margin-right: 20px;
-}
-.fa-wordpress{
-  float: right;
-  margin-right: 20px;
-}
-
-input{
-  color: white;
-  background-color: black;
-  width: 160px;
-  height: 20px;
-  margin-top: 48px;
-  margin-bottom: 48px;
-  margin-left: 20px;
-  border: 1px solid white;
-}
- .photo5 {
-  width: 164px;
-  height: 164px;
-  margin-bottom: 15px;
- }
- .photo5:hover{
-    opacity:0.6;
-    color: white;
- }
- .textleft{
-  padding-bottom: 55px;
-  height: 400px;
-  color: white;
-  margin-left: 20px;
-  text-decoration: none;
- }
- .textleft h6{
-  padding-left: 0px;
-  margin-top: 0px;
-  margin-bottom: 0px;
- }
-  .textleft h5{
-    padding-left:0px;
-    margin-bottom: 30px;
-    margin-top: 60px;
-  }
-
- .textleft p a{
-  color: white;
-  font-size: 12px;
-  line-height: 20px;
-
- }
-
- .textleft p{
-  color: white;
-  margin-bottom: 0px;
- }
-
- .textleft p a:hover{
-  color:#24890D;
-  text-decoration: none;
- }
-
-.Pbottom{
-  height: 200px;
-  padding-left: 20px;
-  margin-top: 55px;
-  font-size: 12px;
-  color: white;
-}
-
-.Pbottom p a{
-  color:#24890D;
-  text-decoration: none;
-}
-
-/*footer*/
-
- footer {
+ 
+ .fotter {
   padding: 10px;
   color: white;
   height: 48px;
